--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
-<template>
-    <div class="myClass">I like: </div>
-  </template>
-  
-  <script>
-  let myArr = ["Audi", "BMW", "Ford", "Honda", "Jaguar", "Nissan"];
-  function showContent() {
-    let temp, item, a, i;
-    temp = document.getElementsByTagName("template")[0];
-    item = temp.content.querySelector("div");
-    for (i = 0; i < myArr.length; i++) {
-      a = document.importNode(item, true);
-      a.textContent += myArr[i];
-      document.body.appendChild(a);
-    }
-  }
-  </script>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Bienvenu dans mon site </title>
+</head>
+<body>
+ 
+<h1>Bonjour à toutes et à tous</h1>
+<p> Voilà un premier exemple d'une page statique hebergé dans le serveur de github</p>
+<h2>Url de la page est ...  </h2>
+<p>https://rbabari.github.io/test-web-GR1268/</p>
+ 
+</body>
+</html>
