--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     </head>
     <body>
         
-        <h1>Les listes</h1>
+        <h1>listes cours POO (PROGRAMMATION ORIENTÉE OBJET)</h1>
         <ol type="I">
-            <li><strong>Les listes non ordonnées</strong></li>
+            <li><strong>LES INTERFACES</strong></li>
                 <p>Cette vidéo présente les listes non ordonnées.</p>
-            <li><strong>Les listes ordonnées</strong></li>
+            <li><strong>REDÉFINITION & POLYMORPHISME</strong></li>
                 <p>Cette vidéo présente les listes ordonnées.</p>
-            <li><strong>Les listes imbriquées</strong></li>
+            <li><strong>LES DIAGRAMMES DE CLASSE</strong></li>
                 <p>Cette vidéo présente les listes imbriquées.</p>
             <li><strong>Les listes application</strong></li>
                 <p>Cette vidéo est un exercice d'application des listes en HTML.</p>
