--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>Cette vidéo présente les listes ordonnées.</p>
             <li><strong>LES DIAGRAMMES DE CLASSE</strong></li>
                 <p>Cette vidéo présente les listes imbriquées.</p>
-            <li><strong>Les listes application</strong></li>
+            <li><strong>HÉRITAGE</strong></li>
                 <p>Cette vidéo est un exercice d'application des listes en HTML.</p>
         </ol>
         
